Update contact phone number in footer

--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
         <div class="footer-section">
           <h3>Kontak & Bantuan</h3>
           <p><i class="fas fa-envelope"></i> info@palmvision.ai</p>
-          <p><i class="fas fa-phone"></i> +62 12</p>
+          <p><i class="fas fa-phone"></i> +62 8134 3145 435</p>
           <p><i class="fas fa-clock"></i> Support 24/7</p>
           <div class="social" style="margin-top: 1rem;">
             <a href="#" aria-label="Email" title="Email"><i class="fas fa-envelope"></i></a>
