--- a/index.html
+++ b/index.html
@@ -915,11 +915,11 @@
         analysis_type: "pest_detection",
         user_id: "demo_user",
         farm_id: "demo_farm",
-        webhookUrl: "http://localhost:5678/webhook-test/PalmVision-Ai"
+        webhookUrl: "https://d027b0a0fe04.ngrok-free.app/webhook-test/PalmVision-Ai"
       };
 
       try {
-        const response = await fetch("http://localhost:5678/webhook-test/PalmVision-Ai", {
+        const response = await fetch("https://d027b0a0fe04.ngrok-free.app/webhook-test/PalmVision-Ai", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify(payload)
