--- a/index.html
+++ b/index.html
@@ -756,13 +756,13 @@
           <img id="preview" src="" alt="Preview" />
           <br>
           <button class="analyze-btn" id="sendBtn">
-            <i class="fas fa-search"></i> Analisis Gambar
+            <i class="fas fa-search"></i> Identifikasi Gambar
           </button>
         </div>
 
         <div class="loading" id="loading">
           <div class="spinner"></div>
-          <p>Sedang menganalisis gambar...</p>
+          <p>Sedang mengidentifikasi gambar...</p>
         </div>
       </div>
     </section>
@@ -780,7 +780,7 @@
             <h3 style="margin: 0; color: var(--yellow);">PalmVision</h3>
           </div>
           <p style="color: rgba(255, 255, 255, 0.9); line-height: 1.6;">
-            Penamfaatan Teknologi AI cerdas untuk identifikasi hama dan gulma pada perkebunan kelapa sawit. 
+            Pemamfaatan Teknologi AI cerdas untuk identifikasi hama dan gulma pada perkebunan kelapa sawit. 
             Mudah, cepat, dan akurat untuk petani Indonesia.
           </p>
         </div>
